llamastack-playground-trustyai/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-stack-playground-sample
  labels:
    app.kubernetes.io/name: llama-stack-playground-sample
    app.kubernetes.io/version: "latest"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: llama-stack-playground-sample
  template:
    metadata:
      labels:
        app.kubernetes.io/name: llama-stack-playground-sample
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: llama-stack-playground-sample
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
          runAsNonRoot: true
        image: "quay.io/rh-aiservices-bu/llama-stack-playground:0.2.11"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8501
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
