llamastack-playground-trustyai/service.yml
apiVersion: v1
kind: Service
metadata:
  name: llama-stack-playground-sample
  labels:
    app.kubernetes.io/name: llama-stack-playground-sample
    app.kubernetes.io/version: "latest"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: llama-stack-playground-sample
